<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medic Schedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Reminder">Select the reminder</string>
    <string-array name="Reminder_arrays">
        <item>"Monday"</item>
        <item>"Tuesday"</item>
        <item>"Wednesday"</item>
        <item>"Thursday</item>
        <item>"Friday"</item>
        <item>"Saturday"</item>
        <item>"Sunday"</item>
    </string-array>

    <string name="Medicie_type"></string>
    <string-array name="Medicine_type">
        <item>"Capsule"</item>
        <item>"Syrup"</item>
        <item>"Injection"</item>
        <item>"Tablet</item>
        <item>"Drops"</item>

    </string-array>


    <string name="p_id"></string>


    <string name="str_btn_find">Find</string>
    <string name="enter_systol">Enter systol</string>
    <string name="enter_dystol">Enter Dystol</string>


    <string-array name="place_type">
        <item>doctor</item>
        <item>hospital</item>
    </string-array>

    <string-array name="place_type_name">
        <item>Doctor</item>
        <item>Hospital</item>
    </string-array>
    <string name="title_activity_extra">extra</string>
    <string name="enter_pulse">Enter pulse</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="enter_doctor_name">Enter Doctor Name</string>
    <string name="enter_doctor_s_e_mail_address">Enter Doctor\'s e-mail address</string>
    <string name="enter_doctor_s_phone_no">Enter Doctor\'s Phone No.</string>
    <string name="enter_the_dosage">Enter the dosage</string>
    <string name="enter_the_start_date">Enter the start date</string>
    <string name="enter_the_no_of_days">Enter the no of days</string>
    <string name="enter_duration">Enter duration</string>
    <string name="enter_reminder_time">Enter reminder time</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="patient">Add Patient</string>
    <string name="doctor">Add Doctor</string>
    <string name="medicine">Add Medicine</string>
    <string name="settings">settings</string>
    <string name="Medicines">medicine</string>
    <string name="blood_pressure_data">Blood Pressure Data</string>
    <string name="sugar_data">Blood Sugar Data</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="txt_dystol">Dystol</string>
    <string name="txt_pulse">Pulse</string>
    <string name="txt_systol">Systol</string>
    <string name="txt_time">Time</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_expiry_date">Enter expiry date</string>
</resources>
