<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/medicine_name"
            style="@style/EditText"
            android:hint="@string/enter_medicine_name" />

        <EditText
            android:id="@+id/reminder_time"
            style="@style/EditText"
            android:hint="@string/enter_reminder_time" />

        <EditText
            android:id="@+id/dosage"
            style="@style/EditText"
            android:hint="@string/enter_the_dosage"
            android:inputType="number" />

        <EditText
            android:id="@+id/quantity"
            style="@style/EditText"
            android:hint="@string/enter_quantity"
            android:inputType="number" />

        <EditText
            android:id="@+id/expiry_date"
            style="@style/EditText"
            android:hint="@string/enter_expiry_date" />

        <Button
            android:id="@+id/med_add"
            style="@style/ButtonStyle"
            android:onClick="onSaveMedicineButtonClick"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>